--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="es">
     <head>
         <title>
             Bienvenido a mi E-Commerce
@@ -6,5 +7,46 @@
     </head>
     <body>
         <h1>Mi E-Commerce</h1>
+
+        <ul>
+            <li>Home</li>
+            <li>Productos</li>
+            <li><a href="about.html" target="_top"> Acerca de...</a></li>
+            <li><a href="contact.html" target="_blank"> Contáctenos</a></li>
+        </ul>
+
+        <hr>
+        <h1>Productos en Oferta</h1>
+
+        <table>
+            <tr>
+                <td>
+                    <a href="product.html" target="_blank"><img src="assets/images/Atari.jpg" width="300px"></a>
+                    <p>Atari 2600</p>
+                </td>
+                <td>
+                    <a href="product.html" target="_blank"><img src="assets/images/images.jpg" width="300px"></a> 
+                    <p>Nintendo swttch</p>
+                </td>
+                <td>
+                    <a href="product.html" target="_blank"><img src="assets/images/download.jpg" width="300px"></a> 
+                    <p>Super Nintendo</p>
+                </td>
+                
+            </tr>
+        </table>
+
+        <!--
+ <p>Mi primer parrafo
+            Mi segundo parrafo
+        </p>
+        <hr>
+        <pre>
+            Mi primer parrafo
+            mi segundo parrafo
+            mi tercer parrafo
+        </pre>
+        -->
+       
     </body>
 </html>
