--- a/index.html
+++ b/index.html
@@ -1,52 +1,214 @@
 <!DOCTYPE html>
-<html lang="es">
-    <head>
-        <title>
-            Bienvenido a mi E-Commerce
-        </title>
-    </head>
-    <body>
-        <h1>Mi E-Commerce</h1>
+<html lang="es" data-bs-theme="dark">
 
-        <ul>
-            <li>Home</li>
-            <li>Productos</li>
-            <li><a href="about.html" target="_top"> Acerca de...</a></li>
-            <li><a href="contact.html" target="_blank"> Contáctenos</a></li>
-        </ul>
+<head>
+    <title>Bienvenido a Mi E-Comerce</title>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="assets/scss/mystyles.scss" class="href">
+</head>
 
-        <hr>
-        <h1>Productos en Oferta</h1>
-
-        <table>
-            <tr>
-                <td>
-                    <a href="product.html" target="_blank"><img src="assets/images/Atari.jpg" width="300px"></a>
-                    <p>Atari 2600</p>
-                </td>
-                <td>
-                    <a href="product.html" target="_blank"><img src="assets/images/images.jpg" width="300px"></a> 
-                    <p>Nintendo swttch</p>
-                </td>
-                <td>
-                    <a href="product.html" target="_blank"><img src="assets/images/download.jpg" width="300px"></a> 
-                    <p>Super Nintendo</p>
-                </td>
-                
-            </tr>
-        </table>
-
-        <!--
- <p>Mi primer parrafo
-            Mi segundo parrafo
-        </p>
-        <hr>
-        <pre>
-            Mi primer parrafo
-            mi segundo parrafo
-            mi tercer parrafo
-        </pre>
+<body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Mi E-Comerce</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Productos</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            Dropdown
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                    </li>
+                </ul>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="buscar" aria-label="search">
+                    <button class="btn btn-outline-success" type="submit">Buscar</button>
+                </form>
+            </div>
+        </div>
+    </nav>
+    <ul>
+        <li>Home</li>
+        <li>Productos</li>
+        <li><a href="about.html" target="_blank">Acerca de ...</a></li>
+        <!--<li><a href="about.html" target="_self">Acerca de ...</a></li>
+        <li><a href="about.html" target="_top">Acerca de ...</a></li>
         -->
-       
-    </body>
+        <li><a href="contact.html" target="_blank">Contacto</a></li>
+
+        <!--Bootstrap-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    </ul>
+
+    <hr>
+
+    <h1>Productos en oferta</h1>
+
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+            <li class="breadcrumb-item"><a href="product.html">Productos</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Detalle de Productos</li>
+        </ol>
+    </nav>
+
+    <div class="content">
+        <div class="row gx=10">
+            <div class="col col-md-3">
+                <!--<p style="background-color: blue; height: 100px;"></p>-->
+                <div class="card" style="width: 18rem;">
+                    <img src="assets/images/camisetas.jpeg" class="card-img-top img-fluid" alt="Chesscake">
+                    <div class="card-body">
+                        <h5 class="card-title">Camisetas</h5>
+                        <p class="card-text">"Sumérgete en la comodidad y el estilo sin esfuerzo con nuestra camiseta oversize [Nombre del Producto]. Diseñada para abrazar la tendencia de prendas holgadas y modernas, esta camiseta ofrece un ajuste relajado que combina a la perfección con cualquier atuendo. Confeccionada con telas suaves y de alta calidad, esta prenda es una declaración de moda por sí sola..</p>
+                        <div class="collapse" id="chesscakemoreinfo">
+                            <div class="card card-body">
+                                Disponible en una gama de tonos y estilos versátiles, nuestra camiseta oversize es la elección ideal para un look casual y chic. Descubre el equilibrio perfecto entre estilo desenfadado y confort sin igual con nuestra camiseta oversize
+                            </div>
+                        </div>
+                        <a href="#chesscakemoreinfo" data-bs-toggle="collapse" class="btn btn-secondary">Mas
+                            informacion</a>
+                        <a href="#" class="btn btn-warning">Detalles</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col col-md-3">
+                <!--<p style="background-color: red; height: 100px;"></p>-->
+                <div class="card" style="width: 18rem;">
+                    <img src="assets/images/gorras.jpg" class="card-img-top img-fluid" alt="tiramisú">
+                    <div class="card-body">
+                        <h5 class="card-title">Gorras</h5>
+                        <p class="card-text">Da un toque de estilo único a tu look con nuestras gorras planas [Nombre del Producto]. Diseñadas para los amantes de la moda urbana, estas gorras combinan a la perfección la elegancia y la informalidad. Confeccionadas con materiales de alta calidad y un diseño moderno, nuestras gorras planas añaden un toque de sofisticación a cualquier atuendo. .</p>
+                        <div class="collapse" id="chesscakemoreinfo">
+                            <div class="card card-body">
+                                Disponibles en una variedad de colores y estilos, estas gorras son el complemento perfecto para tu estilo personal. Haz una declaración de moda audaz y distinguida con nuestras gorras planas y haz que tu estilo destaque en cada ocasión
+                            </div>
+                        </div>
+                        <a href="http://127.0.0.1:3002/product.html" data-bs-toggle="collapse" class="btn btn-secondary">Mas
+                            informacion</a>
+                        <a href="#" class="btn btn-warning">Detalles</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col col-md-3">
+                <!--<p style="background-color: yellow; height: 100px;"></p>-->
+                <div class="card" style="width: 18rem;">
+                    <img src="assets/images/zapatillas.jpg" class="card-img-top img-fluid" alt="chocolatecake">
+                    <div class="card-body">
+                        <h5 class="card-title">Zapatillas</h5>
+                        <p class="card-text">Descubre el legado de la moda urbana con las legendarias zapatillas Nike Air Force One. Un icono de estilo atemporal, estas zapatillas combinan a la perfección el diseño clásico con la comodidad y la innovación. Con su distintivo estilo y su calidad superior, las Air Force One son mucho más que unas simples zapatillas: son una declaración de moda. .</p>
+                        <div class="collapse" id="chesscakemoreinfo">
+                            <div class="card card-body">
+                                Con una construcción duradera y detalles cuidadosamente elaborados, estas zapatillas son perfectas para cualquier ocasión, desde un estilo casual hasta un look más elegante. Eleva tu estilo con la grandeza de las zapatillas Air Force One y haz que cada paso cuente.
+                            </div>
+                        </div>
+                        <a href="#chesscakemoreinfo" data-bs-toggle="collapse" class="btn btn-secondary">Mas
+                            informacion</a>
+                        <a href="#" class="btn btn-warning">Detalles</a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <table class="table table-striped table-bordered">
+        <thead class="table-primary">
+            <tr>
+                <th>#</th>
+                <th>Primer nombre</th>
+                <th>Segundo nombre</th>
+                <th>Edad</th>
+            </tr>
+        <tbody class="table-group-divider">
+            <tr>
+                <th>1</th>
+                <th>William</th>
+                <th>Alvarado</th>
+                <th>25</th>
+            </tr>
+            <tr>
+                <th>2</th>
+                <th>Bryan</th>
+                <th>Lopez</th>
+                <th>24</th>
+            </tr>
+            <tr>
+                <th>3</th>
+                <th>Steven</th>
+                <th>Paez</th>
+                <th>24</th>
+            </tr>
+        </tbody>
+        </thead>
+    </table>
+    <nav aria-label="Page navigation example">
+        <ul class="pagination">
+            <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+            <li class="page-item"><a class="page-link" href="#">1</a></li>
+            <li class="page-item"><a class="page-link" href="#">2</a></li>
+            <li class="page-item"><a class="page-link" href="#">3</a></li>
+            <li class="page-item"><a class="page-link" href="#">Next</a></li>
+        </ul>
+    </nav>
+    <!--    <table>
+        <tr>
+            <td>
+                <a href="product.html" target="_blank"><img src="assets/images/chesscake.jpg" width="360px" /></a>
+                <p>Chesscake</p>
+            </td>
+            <td>
+                <a href="product.html"><img src="assets/images/tiramis&uacute;.jpg" width="360px" alt="tiramisú" /></a>
+                <p>Tiramis&uacute;</p>
+            </td>
+            <td>
+                <a href="product.html"><img src="assets/images/chocolatecake.jpg" width="360px"
+                        alt="chocolatecake" /></a>
+                <p>Chocolatecake</p>
+            </td>
+        </tr>
+    </table>
+-->
+    <!--
+    <p>Mi primer parrafo
+        Mi segundo parrafo
+    </p>
+    <hr>
+    <pre>
+        Mi primer parrafo
+        Mi segundo parrafo
+        Mi tercer parrafo
+    </pre>
+    -->
+
+</body>
+
 </html>
